# hermes-brave-search-pro

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_or_design.yml
.github/workflows/: ci.yml
docs/: installation.md
examples/: config.yaml
scripts/: configure.py  doctor.py  generate_assets.py  install.sh
src/hermes_brave_search/: __init__.py  client.py  compat.py  configure.py  constants.py  doctor.py  provider.py  schemas.py  tools.py
tests/: test_client.py  test_compat.py  test_doctor.py  test_imports.py  test_provider.py  test_tools.py
